@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Maxprograms.
+ * Copyright (c) 2007 - 2024 Maxprograms.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 1.0
@@ -16,6 +16,8 @@ import java.io.IOException;
 import java.lang.System.Logger;
 import java.lang.System.Logger.Level;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class CheckURL {
@@ -36,7 +38,7 @@ public class CheckURL {
 			try {
 				connect(string);
 				waiting = false;
-			} catch (IOException e) {
+			} catch (IOException | URISyntaxException e) {
 				try {
 					Thread.sleep(500);
 					count++;
@@ -53,8 +55,8 @@ public class CheckURL {
 		}
 	}
 
-	private static void connect(String string) throws IOException {
-		URL url = new URL(string);
+	private static void connect(String string) throws IOException, URISyntaxException {
+		URL url = new URI(string).toURL();
 		HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 		connection.setConnectTimeout(1000);
 		connection.connect();
